--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ system/devices/**
 /.vs
 docker-compose.ymlaccess.log
 error.log
+system/plugin/capture_portal
+system/plugin/capture_portal/cache
+system/plugin/capture_portal/site
+system/plugin/capture_portal.php
