--- a/system/plugin/capture_portal/site/config.json
+++ b/system/plugin/capture_portal/site/config.json
@@ -1,1 +1,110 @@
-{"plans":[{"id":1,"name":"10MIN UNLTD","router":1,"price":{"unit":"KES","value":"1"},"bandwidth":{"up":{"unit":"Mbps","value":10},"down":{"unit":"Mbps","value":10}},"limit":{"type":"Unlimited","data":{"unit":"MB","value":0},"time":{"unit":"Hrs","value":0},"validity":{"unit":"Mins","value":10}}},{"id":4,"name":"10MB","router":1,"price":{"unit":"KES","value":"1"},"bandwidth":{"up":{"unit":"Mbps","value":10},"down":{"unit":"Mbps","value":10}},"limit":{"type":"Limited","data":{"unit":"MB","value":10},"time":{"unit":"Hrs","value":0},"validity":{"unit":"Hrs","value":1}}},{"id":5,"name":"Anguka Nayo","router":1,"price":{"unit":"KES","value":"1"},"bandwidth":{"up":{"unit":"Mbps","value":10},"down":{"unit":"Mbps","value":10}},"limit":{"type":"Limited","data":{"unit":"GB","value":3},"time":{"unit":"Hrs","value":1},"validity":{"unit":"Days","value":30}}},{"id":6,"name":"Test Plan","router":1,"price":{"unit":"KES","value":"1"},"bandwidth":{"up":{"unit":"Mbps","value":10},"down":{"unit":"Mbps","value":10}},"limit":{"type":"Unlimited","data":{"unit":"MB","value":0},"time":{"unit":"Hrs","value":0},"validity":{"unit":"Hrs","value":24}}}],"title":"Zeiteck Hoptspot","description":"Affordable and Reliable Wifi","baseURL":"https://biwasol.zeiteckcomputers.co.ke/","router":1}
+{
+  "plans": [
+    {
+      "id": 1,
+      "name": "10MIN UNLTD",
+      "router": 1,
+      "price": {
+        "unit": "KES",
+        "value": "1"
+      },
+      "bandwidth": {
+        "up": {
+          "unit": "Mbps",
+          "value": 10
+        },
+        "down": {
+          "unit": "Mbps",
+          "value": 10
+        }
+      },
+      "limit": {
+        "type": "Unlimited",
+        "data": {
+          "unit": "MB",
+          "value": 0
+        },
+        "time": {
+          "unit": "Hrs",
+          "value": 0
+        },
+        "validity": {
+          "unit": "Mins",
+          "value": 10
+        }
+      }
+    },
+    {
+      "id": 2,
+      "name": "10MB",
+      "router": 1,
+      "price": {
+        "unit": "KES",
+        "value": "1"
+      },
+      "bandwidth": {
+        "up": {
+          "unit": "Mbps",
+          "value": 10
+        },
+        "down": {
+          "unit": "Mbps",
+          "value": 10
+        }
+      },
+      "limit": {
+        "type": "Limited",
+        "data": {
+          "unit": "MB",
+          "value": 10
+        },
+        "validity": {
+          "unit": "Hrs",
+          "value": 1
+        },
+        "time": {
+          "unit": "Hrs",
+          "value": 0
+        }
+      }
+    },
+    {
+      "id": 3,
+      "name": "Anguka Nayo",
+      "router": 1,
+      "price": {
+        "unit": "KES",
+        "value": "1"
+      },
+      "bandwidth": {
+        "up": {
+          "unit": "Mbps",
+          "value": 10
+        },
+        "down": {
+          "unit": "Mbps",
+          "value": 10
+        }
+      },
+      "limit": {
+        "type": "Limited",
+        "data": {
+          "unit": "GB",
+          "value": 3
+        },
+        "validity": {
+          "unit": "Days",
+          "value": 1
+        },
+        "time": {
+          "unit": "Hrs",
+          "value": 1
+        }
+      }
+    }
+  ],
+  "title": "Zeiteck Hotspot",
+  "description": "Affordable and Reliable Wifi",
+  "baseURL": "https://biwasol.zeiteckcomputers.co.ke/",
+  "router": 1
+}
